--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 mail =kavinguvi@gmail.com
 password=Kavinsurya@123
+url =mongodb+srv://kavinsurya:POelrdNrCB64VD9a@cluster0.oiqc4.mongodb.net/password_reset?retryWrites=true&w=majority
